// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contained button renders default contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-raised"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Contained
    </span>
  </button>
</div>
`;

exports[`contained button renders primary contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-containedPrimary MuiButton-contained MuiButton-containedPrimary MuiButton-raised MuiButton-raisedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Contained
    </span>
  </button>
</div>
`;

exports[`contained button renders secondary contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-containedSecondary MuiButton-contained MuiButton-containedSecondary MuiButton-raised MuiButton-raisedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Contained
    </span>
  </button>
</div>
`;

exports[`disabled button renders disabled version 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-outlined MuiButton-disabled"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Click me!
    </span>
  </button>
</div>
`;

exports[`flat button renders default flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Flat
    </span>
  </button>
</div>
`;

exports[`flat button renders primary flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-outlinedPrimary MuiButton-outlined MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Flat
    </span>
  </button>
</div>
`;

exports[`flat button renders secondary flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-outlinedSecondary MuiButton-outlined MuiButton-outlinedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Flat
    </span>
  </button>
</div>
`;

exports[`outlined button renders default outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Outlined
    </span>
  </button>
</div>
`;

exports[`outlined button renders primary outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-outlinedPrimary MuiButton-outlined MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Outlined
    </span>
  </button>
</div>
`;

exports[`outlined button renders secondary outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-outlinedSecondary MuiButton-outlined MuiButton-outlinedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Outlined
    </span>
  </button>
</div>
`;
